# pnu_edu_ru_schedule_parser

./: .gitignore  README.md  main.py  pyproject.toml
app/: cron.py  models.py
