[tool.poetry]
name = "parser"
version = "1.0.0"
description = "Schedule parser for pnu.edu.ru"
authors = ["Sergey Belelya <pewx2@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

fastapi = "~0.95.0"
beautifulsoup4 = "~4.12.2"
uvicorn = "~0.21.1"
requests = "~2.28.2"
starlette = "~0.26.1"
pydantic = "~1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
